--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+    <head>
+        <!--used by the keyboard-->
+        <meta charset="utf-8">
+        <title>Splash Page</title>
+    </head>
+    <body>
 
+    </body>
+    <footer>
+
+    </footer>
 </html>
