--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
     <head>
         <!--used by the keyboard-->
         <meta charset="utf-8">
+
         <title>Splash Page</title>
+
+        <!--Used by browser or Google Search-->
+        <meta name="author" content="Rayne Haiste">
+        <meta name="description" content="Making simple website with HTML">
+        <meta name="keywords" content="learning, html, boilerplate, starter">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
+    <!-- meta http-equiv="default-style" content=""--> <!-- content matches css link exactly-->
+    <!-- Other meta attributes to be aware of -->
+    <!-- meta http-equiv="refresh" content="30"-->
+    <!-- Content forces a Internet Request to refresh webpage every "time value in seconds" -->
+    <!-- Use this when refreshes are needed -->
+    <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
+    <!-- Already specified in the charset above-->
+
+    <!-- Cyber Security Note about JavaScript in Browsers-->
+    <noscript>Running Javascript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
     </head>
     <body>
 
