--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
 
         <title>Splash Page</title>
+        <!-- Tab Image can be changed too, Google how to do this-->
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
         <!--Used by browser or Google Search-->
         <meta name="author" content="Rayne Haiste">
