--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Splash Page</title>
         <!-- Tab Image can be changed too, Google how to do this-->
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/image/favicon.ico">
 
         <!--Used by browser or Google Search-->
         <meta name="author" content="Rayne Haiste">
@@ -25,11 +25,22 @@
     <!-- Cyber Security Note about JavaScript in Browsers-->
     <noscript>Running Javascript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
     </head>
-    
+    <!--Start here, Body Semantic Tags-->
     <body>
+        <header></header>
+        <nav></nav>
+        <aside></aside>
+        <section></section>
+        <main></main>
+        <article></article>
+        <footer></footer>
+    
 
     </body>
     <footer>
+        <blockquote cite="">
+            <!-- Date Accessed 20240214-->
+        </blockquote>
 
     </footer>
 </html>
