--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <blockquote cite="">
             <!-- Date Accessed 20240214-->
         </blockquote>
+        "Great web design without functionality is like a sports car with no engine." -Paul Cookson
+        &copy Rayne Haiste, powered by RayneHaiste in GitHub
 
     </footer>
 </html>
