--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Splash Page</title>
         <!-- Tab Image can be changed too, Google how to do this-->
-        <link rel="icon" type="image/x-icon" href="/image/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <!--Used by browser or Google Search-->
         <meta name="author" content="Rayne Haiste">
