--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
         <blockquote cite="">
             <!-- Date Accessed 20240214-->
         </blockquote>
-        "Great web design without functionality is like a sports car with no engine." -Paul Cookson
-        &copy Rayne Haiste, powered by RayneHaiste in GitHub
+        <p>
+        <strong>"Great web design without functionality is like a sports car with no engine."</strong> 
+        <em>-Paul Cookson</em>
+        </p>
+        <p>&copy Rayne Haiste, powered by RayneHaiste in GitHub </p>
+        <!--Other Information possible like number of visitor, Location, author contract information-->
 
     </footer>
 </html>
