--- a/index.html
+++ b/index.html
@@ -26,15 +26,62 @@
     <noscript>Running Javascript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
     </head>
     <!--Start here, Body Semantic Tags-->
+    <style>
+        * {
+            box-sizing: border-box;
+            font-size: 2vw;
+        }
+        div { border: thin dotted red; }
+
+        header {
+            border: 1px solid green;
+            padding: 15px;
+            font-size: 4vw;
+        }
+
+        nav {
+            width: 25%;
+            float: left;
+            padding: 15px;
+            border: 1px solid rgb(19, 0, 128);
+        }
+
+        main {
+            width: 50%;
+            float: left;
+            padding: 15px;
+            border: 1px solid rgb(19, 0, 128);
+        }
+
+        aside {
+            width: 25%;
+            float: left;
+            padding: 15px;
+            border: 1px solid rgb(19, 0, 128);
+        }
+
+        footer {
+            padding: 15px;
+            border: 1px solid rgb(19, 0, 128);
+        }
+
+        section {
+        }
+
+        article {
+        }
+
+
+    </style>
+
     <body>
-        <header></header>
-        <nav></nav>
-        <aside></aside>
-        <section></section>
-        <main></main>
-        <article></article>
-        <footer></footer>
-    
+        <header>This is a Header</header>
+        <nav>Navigation</nav>
+        <aside>Aside Space </aside>
+        <section>This is a section</section>
+        <main>Main: Important Details</main>
+        <article>Article Placement</article>
+        <footer>This is a footer</footer>
 
     </body>
     <footer>
@@ -49,4 +96,5 @@
         <!--Other Information possible like number of visitor, Location, author contract information-->
 
     </footer>
+    
 </html>
