--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <!--used by the keyboard-->
         <meta charset="utf-8">
 
-        <title>Splash Page</title>
+        <title>HTML Website Project</title>
         <!-- Tab Image can be changed too, Google how to do this-->
-        <link rel="icon" type="image/x-icon" href="favicon(2).ico">
+        <link rel="icon" type="image/x-icon" href="favicon (2).ico">
 
         <!--Used by browser or Google Search-->
         <meta name="author" content="Rayne Haiste">
