Update experiment H P tags.html

--- a/Experiments/experiment H P tags.html
+++ b/Experiments/experiment H P tags.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <!--used by the keyboard-->
-        <meta charset="utf-8">
+<head>
+    <!-- Used by the Keyboard-->
+    <meta charset="utf-8">
 
-        <title>Experiment Website</title>
-        <!-- Tab Image can be changed too, Google how to do this-->
-        <link rel="icon" type="image/x-icon" href="favicon (2).ico">
+    <title>Experimental Page</title>
+    <!-- Tab Favicon can be changed too, Google this-->
+    <!-- See https://www.w3schools.com/howto/howto_html_favicon.asp , accessed 20240214-->
 
-        <!--Used by browser or Google Search-->
-        <meta name="author" content="Rayne Haiste">
-        <meta name="description" content="Making simple website with HTML">
-        <meta name="keywords" content="learning, html, boilerplate, starter">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
+    <!-- Used by browser or Google Search-->
+    <meta name="author" content="Mark Mercer">
+    <meta name="description" content="Learning HTML by building a simple Website">
+    <meta name="keywords" content="learning, html, boilerplate, starter">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
     <!-- meta http-equiv="default-style" content=""--> <!-- content matches css link exactly-->
     <!-- Other meta attributes to be aware of -->
     <!-- meta http-equiv="refresh" content="30"-->
@@ -21,98 +21,146 @@
     <!-- Use this when refreshes are needed -->
     <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
     <!-- Already specified in the charset above-->
-
     <!-- Cyber Security Note about JavaScript in Browsers-->
-    <noscript>Running Javascript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
-    </head>
-    <!--Start here, Body Semantic Tags-->
+
+    <!-- Websites Load in a specific order: Head, CSS, JavaScript, then the Body-->
+
     <style>
         * {
             box-sizing: border-box;
-            font-size: 2vw;
+            //font-size: 2vw;
         }
         div { border: thin dotted red; }
 
-        header {
+        .header {
             border: 1px solid green;
             padding: 15px;
-            font-size: 4vw;
+            //font-size: 4vw;
         }
 
-        nav {
+        .nav {
             width: 25%;
             float: left;
             padding: 15px;
             border: 1px solid rgb(19, 0, 128);
         }
 
-        main {
+        .main {
             width: 50%;
             float: left;
             padding: 15px;
             border: 1px solid rgb(19, 0, 128);
         }
 
-        aside {
+        .aside {
             width: 25%;
             float: left;
             padding: 15px;
             border: 1px solid rgb(19, 0, 128);
         }
 
-        footer {
+        .footer {
             padding: 15px;
             border: 1px solid rgb(19, 0, 128);
         }
 
-        section {
-        }
-
-        article {
-        }
     </style>
 
-    <body>
-       <div></div>
-      <div> <header class="header"> <div>
-        <h1>Experiemental Page: Header and Paragraph Tags</h1>
-        <h1>H1: text</h1>
+    <noscript>Running JavaScript is not necessary in the HTML page ... FYI: your Feature to execute scripts is turned off.</noscript>
+
+</head>
+
+<!-- Start here, BODY Semantic Tags-->
+<body>
+    <div>ViewPort Units are OFF</div>
+    <header class="header">
+        <h1>Experiemental Page: Header and Paragraph Tags, H1</h1>
+        <h3>Subtitle, H3</h3>
+        <h7>H7: text, H-Tag does not Exist</h7>
+        <p>Paragraph Tag, any writing</p>
+    </header>
+    <nav class="nav">
+        <h3>Navigation H-Tags, in h3</h3>
+        <h2>H2: largest h-tag</h2>
+        <h4>H4: text</h4>
+        <h5>H5: text</h5>
+        <h6>H6: text</h6>
+        <p>Paragraph Tag</p>
+        <a>Hyperlink, text only, in a-tag</a>
+    </nav>
+    <main class="main">
+        <h1>MAIN, H-Tags, in h1</h1>
+        <h2>H2: text</h2>
+        <h3>H3: text</h3>
+        <h4>H4: text</h4>
+        <h5>H5: text</h5>
+        <h6>H6: text</h6>
+        <p>Paragraphs can include different types of <sup>big</sup> writing and <sub>small</sub> writing.</p>
+        <a>Hyperlink, text only, in a-tag</a>
+        <br><br>
+        <section class="main">
+                <h2>Section H-Tags, in h2</h2>
+                <h3>SubHeadings usually stop at H3, in h3</h3>
+                <p>H2 is the largest. Put anything in SECTION-tags, in p-tag</p>
+                <a>Hyperlink, text only, in a-tag</a>
+                <br><br>
+                <article class="main">
+                    <h2>Article H-Tags, in h2</h2>
+                    <h3>SubHeadings usually stop at H3, in h3</h3>
+                    <p>Writing Only in P-Tags</p>
+                    <a>Hyperlink, text only, in a-tag</a>
+                </article>
+         </section>
+        <article class="main">
+            <h2>Article H-Tags, in h2</h2>
+            <h3>SubHeadings usually stop at H3, in h3</h3>
+            <p>Writing Only in P-Tags</p>
+            <a>Hyperlink, text only, in a-tag</a>
+        </article>
+    </main>
+    <aside class="aside">
+        <h2>Aside Space H-Tags, in h2</h2>
+        <h3>H3: text</h3>
+        <h4>H4: text</h4>
+        <h5>H5: text</h5>
+        <h6>H6: text</h6>
+        <p>Paragraph Tag</p>
+        <a>Hyperlink, text only, in a-tag</a>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </aside>
+    <section class="main">
+        <h2>Section H-Tags, in h2</h2>
+        <h3>SubHeadings usually stop at H3, in h3</h3>
+        <p>H2 is the largest. Put anything in SECTION-tags, in p-tag</p>
+        <a>Hyperlink, text only, in a-tag</a>
+    </section>
+    <article class="main">
+        <h2>Article H-Tags, in h2</h2>
+        <h3>SubHeadings usually stop at H3, in h3</h3>
+        <p>Writing Only in P-Tags</p>
+        <a>Hyperlink, text only, in a-tag</a>
+    </article>
+    <footer calss="footer">
+        <h1>Footer H-Tags,in h1</h1>
         <h2>H2: text</h2>
         <h3>H3: text</h3>
         <h4>H4: text</h4>
         <h5>H5: text</h5>
         <h6>H6: text</h6>
         <h7>H7: text</h7>
-        <nav class="nav">
-            Navigation H-Tags
-            H1: text
-            H2: text
-            H3: text
-            H4: text
-            H5: text
-            H6: text
-            H7: text
-        </nav>
-        <main class="main">MAIN, H-Tags</main>
-        <aside class="aside">Aside Space H-Tags</aside>
-        <section class="main">Section H-Tags</section>
-        <article class="main">Article H-Tags</article>
-        <footer calss="footer">Footer H-Tags</footer>
-    </body>
-
-
-    </body>
-    <footer>
-        <blockquote cite="">
-            <!-- Date Accessed 20240214-->
-        </blockquote>
-        <p>
-        <strong>"Great web design without functionality is like a sports car with no engine."</strong> 
-        <em>-Paul Cookson</em>
-        </p>
-        <p>&copy Rayne Haiste, powered by RayneHaiste in GitHub </p>
-        <!--Other Information possible like number of visitor, Location, author contract information-->
-
+        <p>Paragraph Tag</p>
     </footer>
-    
+</body>
+<footer>
+    <blockquote cite="">
+        <!-- Date Accessed 20240214-->
+    </blockquote>
+    <p>
+        <strong>"Getting information off the Internet is like taking a drink from a firehose."</strong>
+        <em>- Mitch Kapor</em>
+    </p>
+    <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
+    <!-- Other information possilbe like Number of Visitor, Location, author contract information-->
+</footer>
 </html>
