Update experiment H P tags.html

--- a/Experiments/experiment H P tags.html
+++ b/Experiments/experiment H P tags.html
@@ -9,7 +9,7 @@
     <!-- See https://www.w3schools.com/howto/howto_html_favicon.asp , accessed 20240214-->
 
     <!-- Used by browser or Google Search-->
-    <meta name="author" content="Mark Mercer">
+    <meta name="author" content="Rayne Haiste">
     <meta name="description" content="Learning HTML by building a simple Website">
     <meta name="keywords" content="learning, html, boilerplate, starter">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -160,7 +160,7 @@
         <strong>"Getting information off the Internet is like taking a drink from a firehose."</strong>
         <em>- Mitch Kapor</em>
     </p>
-    <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
+    <p>&copy Rayne Haiste, powered by RayneHaiste in GitHub</p>
     <!-- Other information possilbe like Number of Visitor, Location, author contract information-->
 </footer>
 </html>
