--- a/childpages/MetaData.html
+++ b/childpages/MetaData.html
@@ -62,7 +62,7 @@
         .footer {
             width: 100%;
             padding: 15px;
-            border: 1px solid rgb(19, 0, 128); 
+            border: 1px solid rgb(19, 0, 128);
         }
 
     </style>
@@ -81,27 +81,13 @@
         <p>Paragraph Tag, any writing</p>
     </header>
     <nav class="nav">
-        <h3 style="text-align: center;">Navigation</h3>
-        <h2>
-            <li><a href="https://raynehaiste.github.io/Learning-HTML/"> Home Page </a> </li>
-        </h2>
-       
-        <h3>
-            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/Experiments/experiment%20H%20P%20tags.html"> 
-                Experiment Page </a> </li>
-        </h3>
-        <h4>
-            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/MetaData.html"> 
-                Meta Data </a> </li>
-        </h4>
-        <h5>
-            <li><a href=""> 
-                H and P Tags </a> </li>
-        </h5>
+        <h3>Navigation H-Tags, in h3</h3>
+        <h2>H2: largest h-tag</h2>
+        <h4>H4: text</h4>
+        <h5>H5: text</h5>
         <h6>H6: text</h6>
         <p>Paragraph Tag</p>
         <a>Hyperlink, text only, in a-tag</a>
-        <ul style="list-style-type:lower-alpha"></ul>
     </nav>
     <main class="main">
         <h1 style="text-align: center;">MAIN, H-Tags, in h1</h1>
