--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!--used by the keyboard-->
         <meta charset="utf-8">
 
-        <title>HTML Website Project</title>
+        <title>Splash Page</title>
         <!-- Tab Image can be changed too, Google how to do this-->
         <link rel="icon" type="image/x-icon" href="favicon (2).ico">
 
