--- a/childpages/Childpage - Copy.html
+++ b/childpages/Childpage - Copy.html
@@ -96,7 +96,7 @@
         </h4>
         <h5>
             <li><a href=""> 
-                H and P Tags </a> </li>
+               In Progress</a> </li>
         </h5>
         <h6>H6: text</h6>
         <p>Paragraph Tag</p>
