--- a/childpages/MetaData.html
+++ b/childpages/MetaData.html
@@ -4,7 +4,7 @@
     <!-- Used by the Keyboard-->
     <meta charset="utf-8">
 
-    <title>ChildPage</title>
+    <title>Meta Data</title>
     <!-- Tab Favicon can be changed too, Google this-->
     <!-- See https://www.w3schools.com/howto/howto_html_favicon.asp , accessed 20240214-->
 
@@ -75,10 +75,10 @@
 <body>
     <div>ViewPort Units are OFF</div>
     <header class="header">
-        <h1 style="text-align: center;">Experimental Page: Header and Paragraph Tags, H1</h1>
-        <h3>Subtitle, H3</h3>
+        <h1 style="text-align: center;">Meta Data Page</h1>
+        <h3>MetaData in the head of html</h3>
         <h7>H7: text, H-Tag does not Exist</h7>
-        <p>Paragraph Tag, any writing</p>
+        <p>Open this file using a WYSIWYG like microsoft visual code studio</p>
     </header>
     <nav class="nav">
         <h3>Navigation H-Tags, in h3</h3>
