Update experiment H P tags.html

--- a/Experiments/experiment H P tags.html
+++ b/Experiments/experiment H P tags.html
@@ -74,9 +74,8 @@
 <body>
     <div>ViewPort Units are OFF</div>
     <header class="header">
-        <h1>Showing what is possible with with H, P, A, SUP tags </h1>
+        <h1 style="text-align: center;">Showing what is possible with with H, P, A, SUP, and SUB Tags</h1>
         <h3>Subtitle, H3</h3>
-        <h7>H7: text, H-Tag does not Exist</h7>
         <p>Paragraph Tag, any writing</p>
     </header>
     <nav class="nav">
