--- a/childpages/ChildTemplate(main).html
+++ b/childpages/ChildTemplate(main).html
@@ -4,7 +4,7 @@
     <!-- Used by the Keyboard-->
     <meta charset="utf-8">
 
-    <title>ChildPage</title>
+    <title>ChildTemplate</title>
     <!-- Tab Favicon can be changed too, Google this-->
     <!-- See https://www.w3schools.com/howto/howto_html_favicon.asp , accessed 20240214-->
 
@@ -91,12 +91,12 @@
                 Experiment Page </a> </li>
         </h3>
         <h4>
-            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/MetaData.html"> 
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/MetaData.html"> 
                 Meta Data </a> </li>
         </h4>
         <h5>
-            <li><a href=""> 
-               In Progress</a> </li>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/Childpage.html"> 
+               Child Page</a> </li>
         </h5>
         <h6>
             <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/images.html"> 
@@ -147,7 +147,7 @@
         <p>Paragraph Tag</p>
         <a>Hyperlink, text only, in a-tag</a>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br>
     </aside>
     <section class="main">
         <h2>Section H-Tags, in h2</h2>
