--- a/childpages/Childpage.html
+++ b/childpages/Childpage.html
@@ -75,19 +75,38 @@
 <body>
     <div>ViewPort Units are OFF</div>
     <header class="header">
-        <h1 style="text-align: center;">Experimental Page: Header and Paragraph Tags, H1</h1>
-        <h3>Subtitle, H3</h3>
-        <h7>H7: text, H-Tag does not Exist</h7>
-        <p>Paragraph Tag, any writing</p>
+        <h1 style="text-align: center;">Child Page</h1>
+        <h3></h3>
+        <h7></h7>
+        <p></p>
     </header>
     <nav class="nav">
-        <h3>Navigation H-Tags, in h3</h3>
-        <h2>H2: largest h-tag</h2>
-        <h4>H4: text</h4>
-        <h5>H5: text</h5>
-        <h6>H6: text</h6>
+        <h3 style="text-align: center;">Navigation</h3>
+        <h2>
+            <li><a href="https://raynehaiste.github.io/Learning-HTML/"> Home Page </a> </li>
+        </h2>
+       
+        <h3>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/Experiments/experiment%20H%20P%20tags.html"> 
+                Experiment Page </a> </li>
+        </h3>
+        <h4>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/MetaData.html"> 
+                Meta Data </a> </li>
+        </h4>
+        <h5>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/Childpage.html"> 
+               Child Page</a> </li>
+        </h5>
+        <h6>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/images.html"> 
+                Images Page</a> </li>
+
+
+        </h6>
         <p>Paragraph Tag</p>
         <a>Hyperlink, text only, in a-tag</a>
+        <ul style="list-style-type:lower-alpha"></ul>
     </nav>
     <main class="main">
         <h1 style="text-align: center;">MAIN, H-Tags, in h1</h1>
