--- a/childpages/MetaData.html
+++ b/childpages/MetaData.html
@@ -81,13 +81,43 @@
         <p>Open this file using a WYSIWYG like microsoft visual code studio</p>
     </header>
     <nav class="nav">
-        <h3>Navigation H-Tags, in h3</h3>
-        <h2>H2: largest h-tag</h2>
+        <h3 style="text-align: center;">Navigation</h3>
+        <h2>
+            <li><a href="https://raynehaiste.github.io/Learning-HTML/"> Home Page </a> </li>
+        </h2>
+       
+        <h3>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/Experiments/experiment%20H%20P%20tags.html"> 
+                Experiment Page </a> </li>
+        </h3>
+        <h4>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/MetaData.html"> 
+                Meta Data </a> </li>
+        </h4>
+        <h5>
+            <li><a href=""> 
+               In Progress</a> </li>
+        </h5>
+        <h6>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/images.html"> 
+                Images Page</a> </li>
+
+
+        </h6>
+        <p>Paragraph Tag</p>
+        <a>Hyperlink, text only, in a-tag</a>
+        <ul style="list-style-type:lower-alpha"></ul>
+    </nav>
+    <main class="main">
+        <h1 style="text-align: center;">MAIN, H-Tags, in h1</h1>
+        <h2>H2: text</h2>
+        <h3>H3: text</h3>
         <h4>H4: text</h4>
         <h5>H5: text</h5>
         <h6>H6: text</h6>
-        <p>Paragraph Tag</p>
+        <p>Paragraphs can include different types of <sup>big</sup> writing and <sub>small</sub> writing.</p>
         <a>Hyperlink, text only, in a-tag</a>
+        <br><br>
     </nav>
     <main class="main">
         <h1 style="text-align: center;">MAIN, H-Tags, in h1</h1>
