--- a/childpages/ChildTemplate(main).html
+++ b/childpages/ChildTemplate(main).html
@@ -84,26 +84,26 @@
         <h3 style="text-align: center;">Navigation</h3>
         <h2>
             <li><a href="https://raynehaiste.github.io/Learning-HTML/"> Home Page </a> </li>
-        </h2>
-       
-        <h3>
+        <br>
+              <li><a href=" file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/Developer.html"> 
+            Developer Page </a> </li>
+        <br>
             <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/Experiments/experiment%20H%20P%20tags.html"> 
                 Experiment Page </a> </li>
-        </h3>
-        <h4>
+        <br>
             <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/MetaData.html"> 
                 Meta Data </a> </li>
-        </h4>
-        <h5>
+        <br>
             <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/Childpage.html"> 
                Child Page</a> </li>
-        </h5>
-        <h6>
+        <br>
             <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/images.html"> 
                 Images Page</a> </li>
+        <br>
+            <li><a href="file://fs-052/studuser$/Gr10/r.haiste/My%20Documents/GitHub/Learning-HTML/childpages/Developer.html"> 
+                Developer Page</a> </li>
+        
 
-
-        </h6>
         <p>Paragraph Tag</p>
         <a>Hyperlink, text only, in a-tag</a>
         <ul style="list-style-type:lower-alpha"></ul>
@@ -177,8 +177,8 @@
         <!-- Date Accessed 20240214-->
     </blockquote>
     <p>
-        <strong style="text-align: center;">"Getting information off the Internet is like taking a drink from a firehose."</strong>
-        <em>- Mitch Kapor</em>
+        <strong style="text-align: center;">“Great web design without functionality is like a sports car with no engine.”</strong>
+        <em>- Paul Cookson</em>
     </p>
     <p>&copy Rayne Haiste, powered by RayneHaiste in GitHub</p>
     <!-- Other information possilbe like Number of Visitor, Location, author contract information-->
