--- a/childpages/images.html
+++ b/childpages/images.html
@@ -193,8 +193,8 @@
         <!-- Date Accessed 20240214-->
     </blockquote>
     <p>
-        <strong style="text-align: center;">"Getting information off the Internet is like taking a drink from a firehose."</strong>
-        <em>- Mitch Kapor</em>
+        <strong style="text-align: center;">“Great web design without functionality is like a sports car with no engine.”</strong>
+        <em>- Paul Cookson</em>
     </p>
     <p>&copy Rayne Haiste, powered by RayneHaiste in GitHub</p>
     <!-- Other information possilbe like Number of Visitor, Location, author contract information-->
